--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "mysql2": "^2.3.3",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "sequelize": "^6.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,7 +29,9 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2"
+    "nodemon": "^2.0.15",
+    "react-test-renderer": "17.0.2",
+    "sequelize-cli": "^6.4.1"
   },
   "jest": {
     "preset": "react-native"
